# nnrp-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: pull_request_template.md
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  docs.md  feature.md  maintenance.md  release.md
.github/workflows/: ci.yml  release.yml
benchmarks/include/nnrp/: nnrp_ffi_benchmark.h
conformance/: nnrp-1-preview2.capabilities.json  nnrp-1-preview3.capabilities.json
crates/nnrp-conformance/: Cargo.toml
crates/nnrp-conformance/src/: adapter_conformance.rs  lib.rs  nnrp1_baseline.rs  preview2_baseline.rs  preview3_vectors.rs  preview4_vectors.rs  wire_conformance.rs  wire_endpoint.rs  wire_external.rs  wire_reference.rs
crates/nnrp-conformance/tests/: adapter_cli.rs  preview3_public_suite.rs  preview4_control_fixtures.rs
crates/nnrp-core/: Cargo.toml
crates/nnrp-core/src/: cache.rs  capability.rs  codes.rs  control.rs  data.rs  enums.rs  error.rs  flow.rs  header.rs  lib.rs  lifecycle.rs  object.rs  operation.rs  preview.rs  recovery.rs  schema.rs  session.rs  version.rs
crates/nnrp-core/tests/: multi_session_orchestration.rs
crates/nnrp-ffi/: Cargo.toml  build.rs
crates/nnrp-ffi/src/: lib.rs  transport.rs  transport_exports.rs
crates/nnrp-ffi/tests/: benchmark_ffi_surface.rs  role_carrier_e2e.rs
crates/nnrp-runtime/: Cargo.toml
crates/nnrp-runtime/src/: client.rs  error.rs  lib.rs  packet.rs  pressure.rs  server.rs  transport.rs
crates/nnrp-runtime/tests/: tcp_loopback.rs
crates/nnrp-transport-ipc/: Cargo.toml
crates/nnrp-transport-ipc/src/: lib.rs
crates/nnrp-transport-provider/: Cargo.toml
crates/nnrp-transport-provider/src/: lib.rs
crates/nnrp-transport-quic/: Cargo.toml
crates/nnrp-transport-quic/src/: lib.rs
crates/nnrp-transport-tcp/: Cargo.toml
crates/nnrp-transport-tcp/src/: lib.rs
crates/nnrp-transport-websocket/: Cargo.toml
crates/nnrp-transport-websocket/src/: lib.rs
crates/nnrp-wasm/: Cargo.toml
crates/nnrp-wasm/pkg/: nnrp_wasm.d.ts
crates/nnrp-wasm/src/: browser_role.rs  lib.rs
crates/nnrp-wasm/tests/: wasm_bindgen_smoke.rs
doc/: browser-wasm.md  native-link-library.md  v1-preview3-implementation-notes.md  v1-preview4-downstream-sdk-checklist.md  v1-preview4-release-notes.md  wire-conformance.md
doc/benchmarks/: preview4-release-prep-2026-06-10.md
doc/todo/v1-preview3/: 00-inherited-nnrp1-baseline.md  01-foundation-and-contract.md  02-connection-session-flow-control.md  02a-connection-session-lifecycle.md  02b-scheduling-and-operation-model.md  02c-recovery-and-binding-consumption.md  03-cache-schema-profile-registry.md  04-implementation-surface.md  04a-core-surface.md  04b-ffi-surface.md  04c-conformance-and-binding-rollout.md  05-validation-and-docs.md  06-client-server-runtime.md  06a-transport-provider-packaging.md  implementation-todo.md
doc/todo/v1-preview4/: 00-scope-and-ownership.md  01-runtime-control-protocol.md  02-runtime-object-cache-reference.md  03-ipc-websocket-transports.md  04-ffi-wasm-artifact-surface.md  05-wire-conformance-runner.md  06-release-validation-and-docs.md  implementation-todo.md
include/nnrp/: nnrp.h  nnrp_error.h  nnrp_ffi.h  nnrp_runtime.h  nnrp_version.h
scripts/: check_lcov_coverage.py  check_release_surface_sync.py  inspect_release_artifacts.py  package_native_artifacts.py  package_wasm_primitives.py  resolve_crate_publish_order.py  resolve_version.py  smoke_test_native_transport_ffi.py
scripts/tests/: test_inspect_release_artifacts.py  test_package_native_artifacts.py  test_resolve_crate_publish_order.py  test_resolve_version.py  test_smoke_test_native_transport_ffi.py
