[workspace]
members = [
    "crates/nnrp-core",
    "crates/nnrp-runtime",
    "crates/nnrp-transport-provider",
    "crates/nnrp-transport-ipc",
    "crates/nnrp-transport-tcp",
    "crates/nnrp-transport-quic",
    "crates/nnrp-transport-websocket",
    "crates/nnrp-ffi",
    "crates/nnrp-wasm",
    "crates/nnrp-conformance",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "1.0.0-preview.4.2"
rust-version = "1.82"
authors = ["NagareWorks"]
repository = "https://github.com/NagareWorks/nnrp-rs"
homepage = "https://nagareworks.github.io/nnrp-doc/"
documentation = "https://docs.rs/nnrp-core"
readme = "README.md"
keywords = ["nnrp", "ai", "runtime", "protocol", "streaming"]
categories = ["network-programming", "asynchronous", "api-bindings"]

[workspace.dependencies]
async-trait = "0.1"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-tungstenite = "0.28"
wasm-bindgen = "=0.2.122"
