[workspace]
members = [
    "crates/nnrp-core",
    "crates/nnrp-runtime",
    "crates/nnrp-transport-provider",
    "crates/nnrp-transport-ipc",
    "crates/nnrp-transport-tcp",
    "crates/nnrp-transport-quic",
    "crates/nnrp-transport-websocket",
    "crates/nnrp-ffi",
    "crates/nnrp-wasm",
    "crates/nnrp-conformance",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "1.0.0-preview.4.14"
rust-version = "1.82"
authors = ["NagareWorks"]
repository = "https://github.com/NagareWorks/nnrp-rs"
homepage = "https://nagareworks.github.io/nnrp-doc/"
documentation = "https://docs.rs/nnrp-core"
readme = "README.md"
keywords = ["nnrp", "ai", "runtime", "protocol", "streaming"]
categories = ["network-programming", "asynchronous", "api-bindings"]

[workspace.dependencies]
async-trait = "0.1"
futures-util = "0.3"
http = "=1.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["logging", "ring", "tls12"] }
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
wasm-bindgen = "=0.2.122"
js-sys = "=0.3.99"
wasm-bindgen-futures = "=0.4.72"
