[package]
name = "nnrp-conformance"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Rust-owned NNRP conformance fixtures, golden vectors, and adapter helpers."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nnrp-conformance"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nnrp-core = { path = "../nnrp-core", version = "1.0.0-preview.3.2" }
nnrp-ffi = { path = "../nnrp-ffi", version = "1.0.0-preview.3.2" }
nnrp-transport-provider = { path = "../nnrp-transport-provider", version = "1.0.0-preview.3.2" }
nnrp-transport-quic = { path = "../nnrp-transport-quic", version = "1.0.0-preview.3.2" }
nnrp-transport-tcp = { path = "../nnrp-transport-tcp", version = "1.0.0-preview.3.2" }
serde_json.workspace = true
