[package]
name = "nnrp-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "C-compatible NNRP FFI surface with value handles, event polling, and native library packaging."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nnrp-ffi"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[features]
default = ["transport-tcp", "transport-quic"]
benchmark-ffi = []
transport-tcp = ["dep:nnrp-transport-tcp"]
transport-quic = ["dep:nnrp-transport-quic"]
transport-ipc = ["dep:nnrp-transport-ipc"]
transport-websocket = ["dep:nnrp-transport-websocket"]

[dependencies]
async-trait.workspace = true
http.workspace = true
nnrp-core = { path = "../nnrp-core", version = "1.0.0-preview.4.9" }
nnrp-runtime = { path = "../nnrp-runtime", version = "1.0.0-preview.4.9" }
nnrp-transport-ipc = { path = "../nnrp-transport-ipc", version = "1.0.0-preview.4.9", optional = true }
nnrp-transport-quic = { path = "../nnrp-transport-quic", version = "1.0.0-preview.4.9", optional = true }
nnrp-transport-tcp = { path = "../nnrp-transport-tcp", version = "1.0.0-preview.4.9", optional = true }
nnrp-transport-websocket = { path = "../nnrp-transport-websocket", version = "1.0.0-preview.4.9", optional = true }
tokio.workspace = true
