[package]
name = "nnrp-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Transport-neutral NNRP client/server session runtime over framed async transport slots."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nnrp-runtime"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
nnrp-core = { path = "../nnrp-core", version = "1.0.0-preview.3.5" }
thiserror.workspace = true
tokio.workspace = true
