[package]
name = "nnrp-transport-quic"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "QUIC transport provider slot and injection helpers for NNRP without freezing a concrete QUIC backend."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nnrp-transport-quic"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
native-loader = ["nnrp-transport-provider/native-loader"]
wasm = ["nnrp-transport-provider/wasm"]

[dependencies]
nnrp-core = { path = "../nnrp-core", version = "1.0.0-preview.3" }
nnrp-runtime = { path = "../nnrp-runtime", version = "1.0.0-preview.3" }
nnrp-transport-provider = { path = "../nnrp-transport-provider", version = "1.0.0-preview.3", default-features = false, features = ["quic"] }
async-trait.workspace = true
tokio.workspace = true
