[package]
name = "nnrp-transport-quic"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Default Quinn/Rustls QUIC transport provider plus injection helpers for NNRP."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nnrp-transport-quic"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = []
native-loader = ["nnrp-transport-provider/native-loader"]
wasm = ["nnrp-transport-provider/wasm"]

[dependencies]
nnrp-core = { path = "../nnrp-core", version = "1.0.0-preview.4.12" }
nnrp-runtime = { path = "../nnrp-runtime", version = "1.0.0-preview.4.12" }
nnrp-transport-provider = { path = "../nnrp-transport-provider", version = "1.0.0-preview.4.12", default-features = false, features = ["quic"] }
async-trait.workspace = true
quinn = "0.11.9"
rcgen = "=0.14.7"
rustls.workspace = true
# Keep the rcgen transitive dependency tree compatible with the CI MSRV.
time = { version = "=0.3.45", default-features = false }
tokio.workspace = true
