[package]
name = "nnrp-transport-tcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
nnrp-core = { path = "../nnrp-core", version = "1.0.0-preview.2" }
nnrp-runtime = { path = "../nnrp-runtime", version = "1.0.0-preview.2" }
nnrp-transport-provider = { path = "../nnrp-transport-provider", version = "1.0.0-preview.2" }
tokio.workspace = true
