[package]
name = "nnrp-transport-tcp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "TCP transport provider package for NNRP framed runtime transport and listener slots."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nnrp-transport-tcp"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nnrp-core = { path = "../nnrp-core", version = "1.0.0-preview.4.4" }
nnrp-runtime = { path = "../nnrp-runtime", version = "1.0.0-preview.4.4" }
nnrp-transport-provider = { path = "../nnrp-transport-provider", version = "1.0.0-preview.4.4" }
tokio.workspace = true
