[package]
name = "nnrp-transport-websocket"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "Native WebSocket transport provider for NNRP binary frames."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nnrp-transport-websocket"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
async-trait.workspace = true
futures-util.workspace = true
nnrp-core = { path = "../nnrp-core", version = "1.0.0-preview.3.8" }
nnrp-runtime = { path = "../nnrp-runtime", version = "1.0.0-preview.3.8" }
nnrp-transport-provider = { path = "../nnrp-transport-provider", version = "1.0.0-preview.3.8" }
tokio.workspace = true
tokio-tungstenite.workspace = true
