[package]
name = "nnrp-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "WASM primitive package for NNRP protocol version, probe scoring, and transport selection bindings."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nnrp-wasm"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
nnrp-core = { path = "../nnrp-core", version = "1.0.0-preview.3.5" }
nnrp-transport-provider = { path = "../nnrp-transport-provider", version = "1.0.0-preview.3.5", default-features = false, features = ["tcp", "quic", "wasm"] }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true
