[package]
name = "nnrp-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true
description = "WASM primitive package for NNRP protocol version, probe scoring, and transport selection bindings."
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/nnrp-wasm"
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["transport-tcp", "transport-quic", "wasm-provider"]
transport-tcp = ["nnrp-transport-provider/tcp"]
transport-quic = ["nnrp-transport-provider/quic"]
transport-ipc = ["nnrp-transport-provider/ipc"]
transport-websocket = ["nnrp-transport-provider/websocket"]
wasm-provider = ["nnrp-transport-provider/wasm"]

[dependencies]
nnrp-core = { path = "../nnrp-core", version = "1.0.0-preview.4.0" }
nnrp-transport-provider = { path = "../nnrp-transport-provider", version = "1.0.0-preview.4.0", default-features = false }
serde.workspace = true
serde_json.workspace = true
wasm-bindgen.workspace = true

[dev-dependencies]
wasm-bindgen-test = "=0.3.72"
